(MAINT) Add slug property to front matter

--- a/content/blog/posts/2022-05-06-prm-0_2_0-release.md
+++ b/content/blog/posts/2022-05-06-prm-0_2_0-release.md
@@ -2,6 +2,7 @@
 title: "Puppet Runtime Manager 0.2.0 Release 🤘"
 date: 2022-05-06
 author: "Peter Murphy and Craig Gumbley"
+slug: prm-0-2-0-release
 github_repo: "" # Disable the edit commands
 ---
 
